--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -38,7 +38,7 @@ body {
 .content {
   width: 80%;
   margin: 0 auto;
-  padding: 50px 0;
+  padding: 9rem 0;
 }
 .content .spEffUl li {
   display: inline-block;
