--- a/src/assets/less/index.less
+++ b/src/assets/less/index.less
@@ -40,7 +40,7 @@ body{
 .content {
   width: 80%;
   margin: 0 auto;
-  padding:50px 0;
+  padding:9rem 0;
   .spEffUl {
     li {
       display: inline-block;
